--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=crudreact
-spring.datasource.url=jdbc:oracle:thin:@host.docker.internal:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
 spring.datasource.username= System
 spring.datasource.password=Admin321
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
